WebCore/accessibility/gtk/AXObjectCacheAtk.cpp
@@ -60,4 +60,8 @@ void AXObjectCache::handleFocusedUIElementChanged(RenderObject* oldFocusedRender
     }
 }
 
+void AXObjectCache::handleScrolledToAnchor(const Node*)
+{
+}
+
 } // namespace WebCore
